--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.65",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.65",
     "@electron-forge/maker-zip": "^6.0.0-beta.65",
-    "electron": "^20.0.3"
+    "electron": "^20.0.3",
+    "electron-packager": "^16.0.0"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
@@ -28,6 +29,10 @@
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
+          "arch": [
+            "x32",
+            "x64"
+          ],
           "config": {
             "name": "gre_player_headless"
           }
