--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -9,6 +9,8 @@ jobs:
     passwordSecret: github_token
     force: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  triggers:
+  - !BranchUpdateTrigger {}
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
